<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/animeImage"
        android:layout_width="140dp"
        android:layout_height="220dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_for_the_anime" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <TextView
            android:id="@+id/animeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:minLines="1"
            android:ellipsize="end"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/synLabel"
                android:text="@string/synonyms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/animeSynonyms1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:layout_gravity="start"
                    android:maxLines="1"
                    android:minLines="1"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/animeSynonyms2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:layout_gravity="start"
                    android:maxLines="1"
                    android:minLines="1"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/animeSynonyms3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:layout_gravity="start"
                    android:maxLines="1"
                    android:minLines="1"
                    android:ellipsize="end"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/enLabel"
                android:text="@string/en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/animeEnTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#000000"
                android:paddingStart="34dp"
                android:paddingEnd="0dp"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:ellipsize="end"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/jpLabel"
                android:text="@string/jp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/animeJpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#000000"
                android:paddingStart="34dp"
                android:paddingEnd="0dp"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:ellipsize="end"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            android:layout_marginTop="5dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/numWatchedEpisodesOrReadVolumes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:text="@string/slash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/numEpisodesOrVolumes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <Space
                android:id="@+id/spaceBetweenVolAndChapIndicators"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/chapterCountsLinearLayout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/numReadChapters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:text="@string/slash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/numChapters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/ageRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginBottom="-15sp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|start">

            <TextView
                android:id="@+id/mediaType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#000000"
                android:layout_gravity="bottom"/>

            <TextView
                android:text="@string/divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#000000"
                android:layout_gravity="bottom"/>

            <TextView
                android:id="@+id/airingStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#000000"
                android:layout_gravity="bottom"/>

            <TextView
                android:text="@string/divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#000000"
                android:layout_gravity="bottom"/>

            <TextView
                android:id="@+id/season"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#000000"
                android:layout_gravity="bottom"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_gravity="top"
                android:layout_margin="5dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>